--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Virgin VCC Demo</title>
+		<title>Virgin VCC Demo 5</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 
